[tool.poetry]
name = "signatures"
version = "0"
description = ""
authors = ["AntiCompositeNumber"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
mwparserfromhell = "*"
requests = "*"
toolforge = "*"
Flask = "^3.1.1"
Flask-Babel = "^4.0.0"
flask-restx = "*"
Werkzeug = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
coveralls = "*"
black = "*"
mypy = "*"
bs4 = "*"
types-requests = "*"
types-PyMySQL = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "info"
addopts = "-v"

[tool.coverage.run]
branch = true
source = ["src"]
omit= ["src/i18n.py"]


